removing octicons in favor of the standard provided FontAwesome icons

--- a/kinesis.html
+++ b/kinesis.html
@@ -50,7 +50,7 @@
         <label for="node-input-shardid"><i class="fa fa-tag"></i> Shard Id</label>
         <select id="node-input-shardid" >
         </select>
-        <span id="shardid-refresh-icon" class="octicon octicon-sync" style="cursor: pointer"></span>
+        <i id="shardid-refresh-icon" class="fa fa-refresh" style="cursor: pointer"></i>
     </div>
     <div class="form-row input-iteratortype-row hidden">
         <label for="node-input-iteratortype"><i class="fa fa-tag"></i> Shard Iterator Type</label>
