--- a/kinesis.html
+++ b/kinesis.html
@@ -44,13 +44,13 @@
     </div>
     <div class="form-row input-streamname-row hidden">
         <label for="node-input-streamname"><i class="fa fa-table"></i> Stream Name</label>
-        <select id="node-input-streamname" >
-        </select>
+        <input type="text" id="node-input-streamname" >
     </div>
     <div class="form-row input-shardid-row hidden">
         <label for="node-input-shardid"><i class="fa fa-tag"></i> Shard Id</label>
         <select id="node-input-shardid" >
         </select>
+        <i id="shardid-refresh-icon" class="fa fa-refresh" style="cursor: pointer"></i>
     </div>
     <div class="form-row input-iteratortype-row hidden">
         <label for="node-input-iteratortype"><i class="fa fa-tag"></i> Shard Iterator Type</label>
@@ -112,34 +112,21 @@
         },
         oneditprepare: function () {
             kinesisNode = RED.nodes.node(this.id);
-            $("#node-input-region").change(function () {
-                var id = $("#node-input-region option:selected").val();
-                var opr = $("#node-input-operation option:selected").val();
-                if(id != kinesisNode.region){
-                    $("#node-input-streamname").val("");
-                }
-                if( id && ( opr == 'putrecord' || opr == 'getsharditerator' ) ){
-                    window.kinesisNodeIntervalId = window.setTimeout(pollKinesisStream,2000);
-                }
-            });
 
-            $("#node-input-operation").change(function () {
-                var id = $("#node-input-region option:selected").val();
-                var opr = $("#node-input-operation option:selected").val();
-                if( id && ( opr == 'putrecord' || opr == 'getsharditerator' ) ){
-                    window.kinesisNodeIntervalId = window.setTimeout(pollKinesisStream,2000);
-                }
-            });
+            //start polling of shard ids when the operation is already selected
+            if(this.operation == "getsharditerator" ) {
+              pollKinesisDescribeStream();
+            }
 
-            $("#node-input-streamname").change(function () {
-                var id = $("#node-input-streamname option:selected").val();
-                var opr = $("#node-input-operation option:selected").val();
-                if(id != kinesisNode.streamname){
-                    $("#node-input-shardid").val("");
-                }
-                if( id && opr == 'getsharditerator' ){
-                    window.kinesisNodeIntervalId = window.setTimeout(pollKinesisDescribeStream,2000);
-                }
+            $("#shardid-refresh-icon").click(function () {
+              var id = $("#node-input-streamname").val();
+              var opr = $("#node-input-operation option:selected").val();
+              if(id != kinesisNode.streamname){
+                  $("#node-input-shardid").val("");
+              }
+              if( id && opr == 'getsharditerator' ){
+                  window.kinesisNodeIntervalId = window.setTimeout(pollKinesisDescribeStream,2000);
+              }
             });
 
             $("#node-input-shardid").change(function () {
@@ -197,41 +184,6 @@
    });
 
     var kinesisNode;
-    function updateKinesisStreamList(lists) {
-        var streams = $("#node-input-streamname");
-        streams.children("option").remove();
-        streams.append('<option value=""> == select Stream == </option>');
-        $.each(lists.StreamNames, function(i, opt){
-            streams.append('<option value="' + opt + '">' + opt + '</option>');
-        });
-        streams.val(kinesisNode.streamname);
-        if(kinesisNode.streamname) streams.change();
-    }
-
-    function pollKinesisStream() {
-        var configid = $("#node-input-aws option:selected").val();
-        var awsconfig = RED.nodes.node(configid);
-
-        var param = "";
-        if(kinesisNode.aws || configid 
-            || ( awsconfig.credentials && awsconfig.credentials.accesskeyid && awsconfig.credentials.secretaccesskey ) ){
-          if (awsconfig.credentials) {
-            param = '&accesskeyid='+awsconfig.credentials.accesskeyid+'&secretaccesskey='+awsconfig.credentials.secretaccesskey;
-          }
-          var region = $("#node-input-region option:selected").val();
-          $.getJSON('amazon-kinesis/liststreams?id='+kinesisNode.id+'&region='+region+param,
-            function(data) {
-              if (data) {
-                updateKinesisStreamList(data);
-                delete window.kinesisNodeIntervalId;
-              } else {
-                window.kinesisNodeIntervalId = window.setTimeout(pollKinesisStream,2000);
-              }
-          });
-        }else{
-          window.kinesisNodeIntervalId = window.setTimeout(pollKinesisStream,2000);
-        }
-    }
 
     function updateKinesisShardList(lists) {
         var sqNumObj = {};
@@ -252,15 +204,16 @@
 
         var param = "";
         if(kinesisNode.aws || configid ||
-            ( awsconfig.credentials && awsconfig.credentials.accesskeyid && awsconfig.credentials.secretaccesskey ) ){
-          if (awsconfig.credentials) {
-            param = '&accesskeyid='+awsconfig.credentials.accesskeyid+'&secretaccesskey='+awsconfig.credentials.secretaccesskey;
+            ( awsconfig && awsconfig.credentials && awsconfig.credentials.accesskeyid && awsconfig.credentials.secretaccesskey ) ){
+          if (awsconfig && awsconfig.credentials) {
+            param = '&accesskeyid=' + encodeURIComponent(awsconfig.credentials.accesskeyid) +
+              '&secretaccesskey=' + encodeURIComponent(awsconfig.credentials.secretaccesskey);
           }
           var region = $("#node-input-region option:selected").val();
-          var stream = $("#node-input-streamname option:selected").val();
+          var stream = $("#node-input-streamname").val();
           $.getJSON('amazon-kinesis/describestream?id='+kinesisNode.id+'&region='+region+'&streamname='+stream+param,
             function(data) {
-              if (data) {
+              if (data && data.StreamDescription) {
                 updateKinesisShardList(data);
                 delete window.kinesisNodeIntervalId;
               } else {
